# gitea-s3-cache

./: Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.yml
src/: main.rs
