[package]
name = "gitea-s3-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-stream = "*"
axum = { version = "0.7", features = ["http2","multipart"] }
tokio = { version = "1.0", features = ["rt-multi-thread","signal","fs"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "^0.3.8"
serde = {version="^1.0",features=["derive"]}
serde_json ="1"
chrono = "0.4"
redis = { version = "1.0.3", features = ["tokio-comp","connection-manager"]}
aws-sdk-s3 = "1.122.0"
aws-smithy-types = {version = "1.4.3" ,features = ["byte-stream-poll-next"]}
uuid = {version = "1.20.0" ,features = ["v4"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
